# lazy-commit

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: PROJECT_DESIGN.md
scripts/: i18n_sync.py
src/lazy_commit/: __init__.py  cli.py  clipboard.py  commit_message.py  config.py  errors.py  git_ops.py  history.py  i18n.py  llm.py  prompting.py  token_count.py  tui.py  ui.py  workflow.py
src/lazy_commit/locales/: en.json  zh-cn.json  zh-tw.json
tests/: test_cli.py  test_clipboard.py  test_commit_message.py  test_config.py  test_git_ops.py  test_history.py  test_i18n.py  test_i18n_sync.py  test_llm.py  test_packaging.py  test_prompting.py  test_token_count.py  test_tui.py  test_ui.py  test_workflow.py
